; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_ll2.c_qed_ll2_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_ll2.c_qed_ll2_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_hwfn = type { %struct.qed_ll2_info* }
%struct.qed_ll2_info = type { i64 }

@QED_MAX_NUM_OF_LL2_CONNECTIONS = common dso_local global i64 0, align 8
@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Failed to allocate `struct qed_ll2'\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qed_ll2_alloc(%struct.qed_hwfn* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.qed_hwfn*, align 8
  %4 = alloca %struct.qed_ll2_info*, align 8
  %5 = alloca i64, align 8
  store %struct.qed_hwfn* %0, %struct.qed_hwfn** %3, align 8
  %6 = load i64, i64* @QED_MAX_NUM_OF_LL2_CONNECTIONS, align 8
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call %struct.qed_ll2_info* @kcalloc(i64 %6, i32 8, i32 %7)
  store %struct.qed_ll2_info* %8, %struct.qed_ll2_info** %4, align 8
  %9 = load %struct.qed_ll2_info*, %struct.qed_ll2_info** %4, align 8
  %10 = icmp ne %struct.qed_ll2_info* %9, null
  br i1 %10, label %16, label %11

11:                                               ; preds = %1
  %12 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %13 = call i32 @DP_NOTICE(%struct.qed_hwfn* %12, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @ENOMEM, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %2, align 4
  br label %34

16:                                               ; preds = %1
  store i64 0, i64* %5, align 8
  br label %17

17:                                               ; preds = %27, %16
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @QED_MAX_NUM_OF_LL2_CONNECTIONS, align 8
  %20 = icmp ult i64 %18, %19
  br i1 %20, label %21, label %30

21:                                               ; preds = %17
  %22 = load i64, i64* %5, align 8
  %23 = load %struct.qed_ll2_info*, %struct.qed_ll2_info** %4, align 8
  %24 = load i64, i64* %5, align 8
  %25 = getelementptr inbounds %struct.qed_ll2_info, %struct.qed_ll2_info* %23, i64 %24
  %26 = getelementptr inbounds %struct.qed_ll2_info, %struct.qed_ll2_info* %25, i32 0, i32 0
  store i64 %22, i64* %26, align 8
  br label %27

27:                                               ; preds = %21
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %5, align 8
  br label %17

30:                                               ; preds = %17
  %31 = load %struct.qed_ll2_info*, %struct.qed_ll2_info** %4, align 8
  %32 = load %struct.qed_hwfn*, %struct.qed_hwfn** %3, align 8
  %33 = getelementptr inbounds %struct.qed_hwfn, %struct.qed_hwfn* %32, i32 0, i32 0
  store %struct.qed_ll2_info* %31, %struct.qed_ll2_info** %33, align 8
  store i32 0, i32* %2, align 4
  br label %34

34:                                               ; preds = %30, %11
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local %struct.qed_ll2_info* @kcalloc(i64, i32, i32) #1

declare dso_local i32 @DP_NOTICE(%struct.qed_hwfn*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
